# ai-at-home

./: BRIEFING_aihome_distributed_edge_compute.md  Cargo.toml  README.md
broker/: Cargo.toml
broker/src/: main.rs
common/: Cargo.toml
common/src/: lib.rs
node/: Cargo.toml
node/src/: main.rs
